fixed nav icons wont show up on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -376,6 +376,8 @@ footer {
     align-items: center;
     bottom: 0;
     left: 0;
+    border-top: 3px solid #fff;
+    border-radius: 5px 5px 0 0;
     /* transform: translateY(-100%); */
     /* background: linear-gradient(
       90deg,
